feat(BA-3099): Implement async file deletion API in vfolder (#6861)
